<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo</string>
    <string name="enter_todo_item">Enter TODO item</string>
    <string name="edit_note">Edit note</string>
    <string name="cancel">Cancel</string>
    <string name="add_todo">Add TODO</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_directory">New directory</string>
    <string name="directory_name">Directory name</string>
    <string name="choose_directory">Choose directory</string>
    <string name="add_directory">New directory</string>
    <string name="directory_hint">Directory name</string>
    <string name="main_directory">Main</string>
    <string name="manage_directories">Manage directories</string>
    <string name="directories_management">Directories management</string>
    <string name="edit_directory">Edit directory</string>
    <string name="delete_directory">Delete directory</string>
    <string name="delete_directory_hint">Are you sure you want to delete this directory?</string>
    <string name="notes_count">Notes: %d</string>
    <string name="directory_notes">Notes</string>
    <string name="add_note_hint">Add note</string>
    <string name="add">Add</string>
    <string name="take_photo">Take photo</string>
    <string name="camera_not_found">Could not find camera</string>
    <string name="camera_no_permission">App needs permission to access camera</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO++</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="login">Log in</string>
    <string name="no_account_popup">Have account? Register</string>
    <string name="forgot_pass_popup">Forgot password?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="register_action">Register</string>
    <string name="have_account_login_popup">Have account? Log in</string>
    <string name="enter_login_and_password">Enter email and password</string>
    <string name="login_failed">Logging failed:\n</string>
    <string name="password_reset">Reset password</string>
    <string name="enter_email">Enter email</string>
    <string name="send">Send</string>
    <string name="email_can_not_be_empty">Email cannot be empty</string>
    <string name="error">"Error: "</string>
    <string name="decline">Decline</string>
    <string name="reset_password_mail_send">If the user exist, the mail to reset the password is send.</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="registration_complete">Registration complete</string>
    <string name="account_with_that_email_exist">Account with that mail already exist</string>
    <string name="todo_image">Image</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_confirmation">Do you want to delete this note?</string>
    <string name="note_details">Details</string>
    <string name="example">Example</string>
    <string name="no_pdf_attached">No PDF attached</string>
    <string name="attach_pdf">Attach PDF</string>
    <string name="open_pdf">Open PDF</string>
    <string name="share_bluetooth">Bluetooth</string>
    <string name="failed_to_load_pdf_data">Failed to load PDF data</string>
    <string name="todo_saved_successfully">Todo saved successfully!</string>
    <string name="image_captured">Image captured</string>
    <string name="image_removed">Image removed</string>
    <string name="failed_to_save_pdf">"Failed to save PDF: "</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="failed_to_delete_directory">Failed to delete directory</string>
    <string name="directory_deleted">Directory deleted!</string>
    <string name="directory_updated">Directory updated!</string>
    <string name="failed_to_update_directory">Failed to update directory</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="directory_added">Directory added!</string>
    <string name="failed_to_add_directory">Failed to add directory</string>
    <string name="failed_to_load_notes_count">Failed to load notes count</string>
    <string name="failed_to_load_directories">Failed to load directories</string>
    <string name="database_reference_or_user_id_is_null">Database reference or user ID is null</string>
    <string name="todo_deleted_successfully">Todo deleted successfully</string>
    <string name="failed_to_delete_note">Failed to delete note</string>
    <string name="failed_to_update_note">Failed to update note</string>
    <string name="failed_to_load_todos">"Failed to load todos: "</string>
    <string name="no_pdf_app_found">No PDF reader application found</string>
    <string name="pdf_file_doesnt_exist">PDF file does not exist</string>
    <string name="attached_pdf_missing">No PDF file attached</string>
    <string name="error_during_pdf_opening">Error while opening PDF: </string>
    <string name="couldnt_load_note_details">Could not load note details</string>
    <string name="share_note">Share note</string>
    <string name="bluetooth_not_found">No sharing application found</string>
</resources>