<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/inputTodo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_todo_item"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_700"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_todo"
        android:minWidth="88dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/take_photo"
        android:src="@android:drawable/ic_menu_camera"
        android:minHeight="56dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:contentDescription="@string/directory_notes" />

    <Switch
        android:id="@+id/themeToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:padding="12dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/manageDirButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:text="@string/manage_directories" />-->