<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="24dp">

    <EditText
        android:id="@+id/inputTodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_details"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:backgroundTint="@color/purple_200"
        android:enabled="false"
        android:focusable="false"
        android:cursorVisible="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/todoImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo_image"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/inputTodo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pdfNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_pdf_attached"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/todoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/openPdfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_pdf"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/pdfNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:minWidth="88dp"
        android:text="@string/edit_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todoImage" />

    <Button
        android:id="@+id/shareBluetoothButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/share_bluetooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openPdfButton" />
</androidx.constraintlayout.widget.ConstraintLayout>